syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.user;

// User Interface of the DistLedger Service

message BalanceRequest {
  string userId = 1;
}

message BalanceResponse {
  int32 value = 1;
  ErrorMsg error = 2;
}

message CreateAccountRequest {
  string userId = 1;
}

message CreateAccountResponse {
  ErrorMsg error = 1;
}

message DeleteAccountRequest {
  string userId = 1;
}

message DeleteAccountResponse {
  ErrorMsg error = 1;
}

message TransferToRequest {
  string accountFrom = 1;
  string accountTo = 2;
  int32 amount = 3;
}

message TransferToResponse {
  ErrorMsg error = 1;
}

enum ErrorMsg {
  OK = 0;
  ERROR_CREATE = 1;
  ERROR_BALANCE = 2;
  ERROR_DELETE = 3;
  ERROR_TRANSFER_ACCOUNT_FROM = 4;
  ERROR_TRANSFER_ACCOUNT_DEST = 5;
  ERROR_TRANSFER_AMOUNT = 6;
  ERROR_UNAVAILABLE = 7;
  ERROR_BALANCE_NOT_ZERO = 8;
  ERROR_CANNOT_BROKER = 9;
}

service UserService {
  rpc balance(BalanceRequest) returns (BalanceResponse);
  rpc createAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc deleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);
  rpc transferTo(TransferToRequest) returns (TransferToResponse);
}
